Changed project to 2d side scrolling

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,2 +1,3 @@
 [/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=A0BB0D454F34F9F84DB676A7E3824B49
+ProjectID=21AAC9DF43041850CDCCAC839030CD5F
+ProjectName=2D Side Scroller Game Blueprint Template
