--- a/MyProject.uproject
+++ b/MyProject.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.15",
+	"EngineAssociation": "{7C301873-453C-CB1A-4532-EC84877C2C72}",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
